# spot-cpp-sdk-release

./: README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cpp/: CHANGELOG.rst  CMakeLists.txt  README.md
debian/: changelog  control  copyright  gbp.conf  rules
